# serialport_detect

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml
examples/: listen.js  listen.rs  monitor.js  monitor.rs
napi/: .gitattributes  Cargo.toml  package.json  pnpm-lock.yaml
src/: detect.rs  lib.rs
src/posix/: mod.rs
src/windows/: guid.rs  mod.rs  wm.rs
